# Sequence-Aware-Pretraining

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  test_prompts.txt
configs/: baseline.yaml  default.yaml
scripts/: run_tests.sh  test.py  test_accuracy.py  train.py
src/: __init__.py  accuracy_test.py  config.py  data.py  data_collator.py  discounted_sft_trainer.py  evaluate.py  evaluation_callback.py  test.py  train.py  utils.py  visualizer.py  weighted_sft_trainer.py
test_configs/: baseline.yaml  comparison.yaml  default.yaml
test_src/: README.md  __init__.py  config.py  generator.py  test.py  utils.py
train_configs/: baseline.yaml  default.yaml
train_src/: __init__.py  config.py  data.py  data_collator.py  discounted_sft_trainer.py  train.py  utils.py
