[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-aware-pretraining"
version = "0.1.0"
description = "Sequence-Aware Pretraining: Discounted Log-Suffix Weighting for Language Models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sequence-Aware Pretraining Team", email = "team@example.com"}
]
license = {text = "MIT"}
keywords = ["machine-learning", "nlp", "language-models", "pretraining", "sft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "datasets>=4.2.0",
    "accelerate>=1.10.0",
    "trl>=0.24.0",
    "numpy>=2.2.2",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "wandb>=0.22.0",
    "huggingface-hub>=0.25.0",
    "peft>=0.17.0",
    "hf_transfer>=0.1.9",
    "bitsandbytes>=0.43.0",
]

[tool.setuptools.packages.find]
where = ["train_src"]
